--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <div class="container"><h1>Cristiano</h1><p>Cristiano Ronaldo dos Santos Aveiro (Funchal, Madeira; 5 de febrero de 1985) es un futbolista portugués. Juega como delantero y su equipo actual es el Al-Nassr F. C. de la Liga Profesional Saudí.19​ Es internacional absoluto con la selección de Portugal, de la cual es capitán, máximo goleador histórico y jugador con más presencias con 216 partidos, logro alcanzado en las eliminatorias para la Eurocopa 2024, reconocido por el Libro Guinness de los récords.</p></div>
     <div class="container"><h2>Botones en bootstrap</h2></div>
-    <button> type="button" class="btn btn primary-"primary</button>
+    <button type="button" class="btn btn-primary-">messi</button>
 </body>
 </html>
