--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <ul class="navbar-nav">
         
         <li class="nav-item">
-            <a class="nav-link"href>
-                home
-            </a>
+            <a class="nav-link"href>home</a>
+            <a class="nav-link"href>Acerca de</a>
+            <a class="nav-link"href>Compras</a>
+            <a class="nav-link"href>Ventas</a>
         </li>
     
     </ul>
