--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 
 
 </div>
-    
+
 
     </nav>
-    
+    <div class="container">
+        <h2>Imagen circular</h2><p>Este es un ejemplo de una imagen circular</p><img src="h.jfif"class rounded circle alt="">
+    </div>
 </body>
 </html>
