--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     </nav>
     <div class="container">
-        <h2>Imagen circular</h2><p>Este es un ejemplo de una imagen circular</p><img src="h.jfif"class rounded circle alt="">
+        <h2>Imagen circular</h2><p>Este es un ejemplo de una imagen circular</p><img src="h.jpg"class rounded circle alt="">
     </div>
 </body>
 </html>
