--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <link href="/bootstrap.min.css">
 <body>
-    <nav class="navbar-spam-small bg-dark">
+    <nav class="navbar navbar-expand-sm bg-dark">
         <div class="container" class="fluid">
             
     <ul class="navbar-nav">
